[package]
name = "ntdb_unwrap"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Decrypt/decoded NTQQ database files."
homepage = "https://github.com/artiga033/ntdb_unwrap"
repository = "https://github.com/artiga033/ntdb_unwrap"
[workspace]

[dependencies]
clap = { version = "4.5.28", features = ["cargo"] }
derive_more = { version = "2.0.1", features = ["from", "into"] }
hex = "0.4.3"
md-5 = "=0.10.6"
prost = "0.13.5"
protobuf = "3.7.1"
rusqlite = { version = "0.33.0", features = [
    "bundled-sqlcipher-vendored-openssl",
] }
serde = { version = "1.0.217", features = ["derive"] }
snafu = "0.8.5"

[dependencies.sqlite_ext_ntqq_db]
path = "sqlite_extension"
version = "*"

[build-dependencies]
protobuf = "3.7.1"
protobuf-codegen = "3.7.1"

[dev-dependencies]
serde_json = "1.0.138"
