[package]
name = "ntdb_unwrap"
version = "0.2.2"
edition = "2024"
license = "MIT"
description = "Decrypt/decoded NTQQ database files."
homepage = "https://github.com/artiga033/ntdb_unwrap"
repository = "https://github.com/artiga033/ntdb_unwrap"
exclude = [".github/",".gitignore"]

[workspace]
members = ["ntdb_unwrap-cli"]
default-members = ["ntdb_unwrap-cli"]

# only common dependencies used by both the cli and library crate are defined as workspace deps
[workspace.dependencies]
snafu = "0.8.5"
rusqlite = { version = "0.33.0", features = [
    "bundled-sqlcipher-vendored-openssl",
] }

[dependencies]
snafu = { workspace = true }
rusqlite = { workspace = true }
log = "0.4.25"
derive_more = { version = "2.0.1", features = ["from", "into"] }
hex = "0.4.3"
md-5 = "=0.10.6"
prost = "0.13.5"
protobuf = "3.7.1"
serde = { version = "1.0.217", features = ["derive"] }
dirs = "6.0.0"
windows-registry = "0.6.1"
object = "0.38.1"
memmap2 = "0.9.9"
memchr = "2.7.6"
capstone = "0.14.0"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_System_Kernel",
]}

[dependencies.sqlite_ext_ntqq_db]
path = "sqlite_extension"
version = "0.1"

[build-dependencies]
protobuf = "3.7.1"
protobuf-codegen = "3.7.1"

[dev-dependencies]
serde_json = "1.0.138"
