[package]
name = "sqlite_ext_ntqq_db"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A SQLite VFS extension to directly read NTQQ database files, skipping the leading bytes."
homepage = "https://github.com/artiga033/ntdb_unwrap/tree/main/sqlite_extension"
repository = "https://github.com/artiga033/ntdb_unwrap/tree/main/sqlite_extension"

[lib]
name = "sqlite_ext_ntqq_db"
crate-type = ["rlib", "cdylib"]
[dependencies]
libsqlite3-sys = { version = "=0.36.0" }

[features]
_cdylib = ["libsqlite3-sys/loadable_extension"]